// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component TopCitedPublications should render loading indicator 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        style="padding: 8px;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
            style="text-align: center;"
          >
            <span
              aria-label="Loading"
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-u4ps4u-MuiCircularProgress-root"
              role="progressbar"
              style="width: 18px; height: 18px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="21"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
            style="text-align: center;"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 css-1q4fwm5-MuiTypography-root"
              style="font-size: 1.33rem;"
            >
              Loading trending works
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    />
  </div>
</div>
`;

exports[`Component TopCitedPublications should render tabs larger than xs width properly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card"
    id="standard-card"
  >
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card-content"
      data-testid="standard-card-content"
      id="standard-card-content"
    >
      <div
        class="MuiTabs-root css-1g4qssd-MuiTabs-root"
      >
        <div
          class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
          style="overflow: hidden; margin-bottom: 0px;"
        >
          <div
            class="MuiTabs-flexContainer MuiTabs-centered css-1wf8b0h-MuiTabs-flexContainer"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth Mui-selected css-uk6zre-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span>
                Trending on Altmetric
              </span>
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-uk6zre-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Trending on Scopus
              </span>
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-uk6zre-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Trending on Web of science
              </span>
            </button>
          </div>
          <span
            class="MuiTabs-indicator css-14t6lgd-MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-1ozqwjr-MuiGrid-root"
        style="margin-top: 24px;"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1fjevb6-MuiTypography-root"
          >
            <div
              class="fez-icon altmetric xxlarge"
            />
            Altmetric score
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
          style="margin-top: -12px;"
        >
          <button
            aria-label="Click for more information"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="help-icon"
            data-mui-internal-clone-element="true"
            data-testid="help-icon"
            id="help-icon"
            tabindex="0"
            type="button"
          >
            <svg
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
              data-testid="HelpOutlineIcon"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
              <title>
                Click for more information
              </title>
            </svg>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          id="topCitedPublications"
          style="padding-top: 24px;"
        >
          <div
            class="MuiBox-root css-0"
            data-testid="search-results-publications-list"
            id="search-results-publications-list"
          >
            <div
              class="publicationCitation"
            >
              <div
                class="css-0"
                data-testid="publication-citation-parent-UQ:330391"
                id="publication-citation-parent-UQ:330391"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                        style="min-width: 1px;"
                      >
                        <h6
                          class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                        >
                          <a
                            href="/view/UQ:330391"
                          >
                            Development and implementation of papillomavirus prophylactic vaccines
                          </a>
                        </h6>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto citationMetrics css-pr9bjb-MuiGrid-root"
                      >
                        <a
                          aria-label="Full citation in Altmetric will open in a new window"
                          class="css-1oqhn84"
                          data-analyticsid="my-trending-pubs-altmetric-link"
                          data-testid="my-trending-pubs-altmetric-link"
                          href="https://queensland.altmetric.com/details/101417"
                          id="my-trending-pubs-altmetric-link"
                          rel="noopener noreferrer"
                          tabindex="0"
                          target="_blank"
                          title="Full citation in Altmetric will open in a new window"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                            >
                              <h6
                                class="MuiTypography-root MuiTypography-h6 difference css-1yxa96n-MuiTypography-root"
                                title="Difference in social media activities"
                              >
                                +
                                3
                              </h6>
                            </div>
                          </div>
                        </a>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                      >
                        <span
                          class="citationContent citationJournalArticle"
                          id="citation-content-UQ:330391"
                        >
                          <span
                            class="citationAuthors"
                          >
                            <span
                              class="citationAuthor"
                              data-testid="rek-author-0"
                            >
                              Frazer, Ian H.
                            </span>
                             
                          </span>
                          <span
                            class="citationDate"
                          >
                            (
                            2014
                            ).
                          </span>
                          <span
                            class="citationTitle"
                          >
                             
                            Development and implementation of papillomavirus prophylactic vaccines
                            .
                          </span>
                          <span
                            class="citationJournalName"
                          >
                             
                            Journal of Immunology
                             
                          </span>
                          <span
                            class="citationVolumeNumber"
                          >
                             
                            192
                             
                          </span>
                          <span
                            class="citationIssueNumber"
                          >
                            (
                            9
                            ) 
                          </span>
                          <span
                            class="citationArticleNumber empty"
                          />
                          <span
                            class="citationPageRange"
                          >
                            <span
                              class="citationStartPage"
                            >
                              4007
                            </span>
                            -
                            <span
                              class="citationEndPage"
                            >
                              4011
                            </span>
                          </span>
                          <span>
                            . 
                          </span>
                          <span
                            data-testid="rek-doi"
                          >
                            <a
                              aria-label="Open this DOI in an new window"
                              class="citationDoiLink css-1oqhn84"
                              data-analyticsid="citation-doi-link"
                              data-testid="citation-doi-link"
                              href="https://doi.org/10.4049/jimmunol.1490012"
                              id="citation-doi-link"
                              rel="noopener noreferrer"
                              tabindex="0"
                              target="_blank"
                              title="Open this DOI in an new window"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
                                data-testid="OpenInNewIcon"
                                focusable="false"
                                id="citation-doi-link-new-window-icon"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                                />
                              </svg>
                              https://doi.org/10.4049/jimmunol.1490012
                            </a>
                          </span>
                        </span>
                        <button
                          aria-label="Copy UQ:330391's citation text to clipboard"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
                          data-analyticsid="citation-copy-text-UQ:330391"
                          data-mui-internal-clone-element="true"
                          data-testid="citation-copy-text-UQ:330391"
                          id="citation-copy-text-UQ:330391"
                          style="padding: 0px;"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11yuopn-MuiSvgIcon-root"
                            data-testid="FileCopyOutlinedIcon"
                            focusable="false"
                            style="width: 14px; margin-left: 6px; margin-top: -6px;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12zm-1 4H8c-1.1 0-1.99.9-1.99 2L6 21c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V11zM8 21V7h6v5h5v9z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                              >
                                <a
                                  aria-label="Full citation in Web of science will open in a new window"
                                  class="wosCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000334672800003"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Web of science will open in a new window"
                                >
                                  <span
                                    class="fez-icon wos large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    12
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Scopus will open in a new window"
                                  class="scopusCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D2-s2.0-84899524861%26origin%3Dinward"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Scopus will open in a new window"
                                >
                                  <span
                                    class="fez-icon scopus large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    13
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Altmetric will open in a new window"
                                  class="altmetricCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://queensland.altmetric.com/details/2291601"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Altmetric will open in a new window"
                                >
                                  <span
                                    class="fez-icon altmetric large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    5
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Google scholar will open in a new window"
                                  class="googleCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://scholar.google.com/scholar?q=intitle:Development%20and%20implementation%20of%20papillomavirus%20prophylactic%20vaccines"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Google scholar will open in a new window"
                                >
                                  <span
                                    class="fez-icon google large"
                                  />
                                </a>
                                <span
                                  class="noOaIcon"
                                  data-testid="oa-n/a-icon"
                                />
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                              />
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component TopCitedPublications should render top cited publications module with not available message 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
      data-analyticsid="alert-error"
      data-testid="alert-error"
      id="alert-error"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="ErrorIcon"
              focusable="false"
              id="error-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              There has been an error - 
            </b>
            <span
              data-testid="alert-message"
            >
              Trending works are temporarily unavailable
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component TopCitedPublications should render top cited publications with default width xs 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card"
    id="standard-card"
  >
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card-content"
      data-testid="standard-card-content"
      id="standard-card-content"
    >
      <div
        class="MuiTabs-root css-1g4qssd-MuiTabs-root"
      >
        <div
          class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
          style="overflow: hidden; margin-bottom: 0px;"
        >
          <div
            class="MuiTabs-flexContainer MuiTabs-centered css-1wf8b0h-MuiTabs-flexContainer"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth Mui-selected css-uk6zre-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="0"
              type="button"
            >
              Trending
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-uk6zre-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              Scopus
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-uk6zre-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              WOS
            </button>
          </div>
          <span
            class="MuiTabs-indicator css-14t6lgd-MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-1ozqwjr-MuiGrid-root"
        style="margin-top: 24px;"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1fjevb6-MuiTypography-root"
          >
            <div
              class="fez-icon altmetric xxlarge"
            />
            Altmetric score
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
          style="margin-top: -12px;"
        >
          <button
            aria-label="Click for more information"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="help-icon"
            data-mui-internal-clone-element="true"
            data-testid="help-icon"
            id="help-icon"
            tabindex="0"
            type="button"
          >
            <svg
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
              data-testid="HelpOutlineIcon"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
              <title>
                Click for more information
              </title>
            </svg>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          id="topCitedPublications"
          style="padding-top: 24px;"
        >
          <div
            class="MuiBox-root css-0"
            data-testid="search-results-publications-list"
            id="search-results-publications-list"
          >
            <div
              class="publicationCitation"
            >
              <div
                class="css-0"
                data-testid="publication-citation-parent-UQ:330391"
                id="publication-citation-parent-UQ:330391"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                        style="min-width: 1px;"
                      >
                        <h6
                          class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                        >
                          <a
                            href="/view/UQ:330391"
                          >
                            Development and implementation of papillomavirus prophylactic vaccines
                          </a>
                        </h6>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto citationMetrics css-pr9bjb-MuiGrid-root"
                      >
                        <a
                          aria-label="Full citation in Altmetric will open in a new window"
                          class="css-1oqhn84"
                          data-analyticsid="my-trending-pubs-altmetric-link"
                          data-testid="my-trending-pubs-altmetric-link"
                          href="https://queensland.altmetric.com/details/101417"
                          id="my-trending-pubs-altmetric-link"
                          rel="noopener noreferrer"
                          tabindex="0"
                          target="_blank"
                          title="Full citation in Altmetric will open in a new window"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                            >
                              <h6
                                class="MuiTypography-root MuiTypography-h6 difference css-1yxa96n-MuiTypography-root"
                                title="Difference in social media activities"
                              >
                                +
                                3
                              </h6>
                            </div>
                          </div>
                        </a>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                      >
                        <span
                          class="citationContent citationJournalArticle"
                          id="citation-content-UQ:330391"
                        >
                          <span
                            class="citationAuthors"
                          >
                            <span
                              class="citationAuthor"
                              data-testid="rek-author-0"
                            >
                              Frazer, Ian H.
                            </span>
                             
                          </span>
                          <span
                            class="citationDate"
                          >
                            (
                            2014
                            ).
                          </span>
                          <span
                            class="citationTitle"
                          >
                             
                            Development and implementation of papillomavirus prophylactic vaccines
                            .
                          </span>
                          <span
                            class="citationJournalName"
                          >
                             
                            Journal of Immunology
                             
                          </span>
                          <span
                            class="citationVolumeNumber"
                          >
                             
                            192
                             
                          </span>
                          <span
                            class="citationIssueNumber"
                          >
                            (
                            9
                            ) 
                          </span>
                          <span
                            class="citationArticleNumber empty"
                          />
                          <span
                            class="citationPageRange"
                          >
                            <span
                              class="citationStartPage"
                            >
                              4007
                            </span>
                            -
                            <span
                              class="citationEndPage"
                            >
                              4011
                            </span>
                          </span>
                          <span>
                            . 
                          </span>
                          <span
                            data-testid="rek-doi"
                          >
                            <a
                              aria-label="Open this DOI in an new window"
                              class="citationDoiLink css-1oqhn84"
                              data-analyticsid="citation-doi-link"
                              data-testid="citation-doi-link"
                              href="https://doi.org/10.4049/jimmunol.1490012"
                              id="citation-doi-link"
                              rel="noopener noreferrer"
                              tabindex="0"
                              target="_blank"
                              title="Open this DOI in an new window"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
                                data-testid="OpenInNewIcon"
                                focusable="false"
                                id="citation-doi-link-new-window-icon"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                                />
                              </svg>
                              https://doi.org/10.4049/jimmunol.1490012
                            </a>
                          </span>
                        </span>
                        <button
                          aria-label="Copy UQ:330391's citation text to clipboard"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
                          data-analyticsid="citation-copy-text-UQ:330391"
                          data-mui-internal-clone-element="true"
                          data-testid="citation-copy-text-UQ:330391"
                          id="citation-copy-text-UQ:330391"
                          style="padding: 0px;"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-11yuopn-MuiSvgIcon-root"
                            data-testid="FileCopyOutlinedIcon"
                            focusable="false"
                            style="width: 14px; margin-left: 6px; margin-top: -6px;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12zm-1 4H8c-1.1 0-1.99.9-1.99 2L6 21c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V11zM8 21V7h6v5h5v9z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                              >
                                <a
                                  aria-label="Full citation in Web of science will open in a new window"
                                  class="wosCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000334672800003"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Web of science will open in a new window"
                                >
                                  <span
                                    class="fez-icon wos large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    12
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Scopus will open in a new window"
                                  class="scopusCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D2-s2.0-84899524861%26origin%3Dinward"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Scopus will open in a new window"
                                >
                                  <span
                                    class="fez-icon scopus large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    13
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Altmetric will open in a new window"
                                  class="altmetricCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://queensland.altmetric.com/details/2291601"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Altmetric will open in a new window"
                                >
                                  <span
                                    class="fez-icon altmetric large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    5
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Google scholar will open in a new window"
                                  class="googleCitationCount css-si3g8d"
                                  data-analyticsid="citation-count-link"
                                  data-testid="citation-count-link"
                                  href="https://scholar.google.com/scholar?q=intitle:Development%20and%20implementation%20of%20papillomavirus%20prophylactic%20vaccines"
                                  id="citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Google scholar will open in a new window"
                                >
                                  <span
                                    class="fez-icon google large"
                                  />
                                </a>
                                <span
                                  class="noOaIcon"
                                  data-testid="oa-n/a-icon"
                                />
                              </div>
                              <div
                                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                              />
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
